--- a/index.html
+++ b/index.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>On-Screen Calculator</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="calculator">
-        <input type="text" id="display" disabled>
-        <div class="buttons">
-            <button class="operator" onclick="appendOperator('+')">+</button>
-            <button class="operator" onclick="appendOperator('-')">-</button>
-            <button class="operator" onclick="appendOperator('x')">*</button>
-            <button class="operator" onclick="appendOperator('/')">/</button>
-            <button onclick="appendNumber('7')">7</button>
-            <button onclick="appendNumber('8')">8</button>
-            <button onclick="appendNumber('9')">9</button>
-            <button onclick="appendNumber('4')">4</button>
-            <button onclick="appendNumber('5')">5</button>
-            <button onclick="appendNumber('6')">6</button>
-            <button onclick="appendNumber('1')">1</button>
-            <button onclick="appendNumber('2')">2</button>
-            <button onclick="appendNumber('3')">3</button>
-            <button onclick="appendNumber('0')">0</button>
-            <button onclick="appendDecimal()">.</button>
-            <button class="clear" onclick="clearDisplay()">C</button>
-            <button class="calculate" onclick="calculate()">=</button>
-            <button class="backspace" onclick="backspace()">⌫</button>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
+        <title>Calculator</title>
+    </head>
+    <body>
+        <h1>Calculator</h1>
+        <div class="calculator">
+            <div class="first-row">
+                <div id="screen">
+                    <div class="previous"></div>
+                    <div class="current"></div>
+                </div>
+                <button id="clear-btn" class="btn">C</button>
+            </div>
+            <div class="other-rows">
+                <button class="btn number">7</button>
+                <button class="btn number">8</button>
+                <button class="btn number">9</button>
+                <button class="btn operator">/</button>
+            </div>
+            <div class="other-rows">
+                <button class="btn number">4</button>
+                <button class="btn number">5</button>
+                <button class="btn number">6</button>
+                <button class="btn operator">x</button>
+            </div>
+            <div class="other-rows">
+                <button class="btn number">1</button>
+                <button class="btn number">2</button>
+                <button class="btn number">3</button>
+                <button class="btn operator">-</button>
+            </div>
+            <div class="other-rows">
+                <button class="btn decimal">.</button>
+                <button class="btn number">0</button>
+                <button class="btn equal">=</button>
+                <button class="btn operator">+</button>
+            </div>
         </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+    </body>
 </html>
