--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
                 <button class="btn operator">+</button>
             </div>
         </div>
+        <footer>
+            <p>&copy; Mars in The 2023 Odin Project</p>
+        </footer>
     </body>
 </html>
