--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
         <title>Calculator</title>
+        <link rel="icon" href="https://static.thenounproject.com/png/2590995-200.png">
     </head>
     <body>
         <h1>Calculator</h1>
