--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="https://static.thenounproject.com/png/2590995-200.png">
     </head>
     <body>
-        <h1>Calculator</h1>
+        <h1><em><strong>Calculator</strong></em></h1>
         <div class="calculator">
             <div class="first-row">
                 <div id="screen">
